--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-logging.level.org.springframework = debug
+#logging.level.org.springframework = debug
 management.endpoints.web.exposure.include=*
+#spring.security.user.name=user
+#spring.security.user.password=password
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
